# nabla

./: .buildinfo  .gitignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CLEAN_SEO_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FAILING_TESTS.md  GEMINI.md  LICENSE  MANIFEST.in  Makefile  PHYSICAL_OPS_HESSIAN_HANDOVER.md  README.md  READMEs.md  REFACTORING_PLAN.md  SEO_FIXED.md  SEO_IMPLEMENTATION_COMPLETE.md  SHARDING_ARCHITECTURE.md  _repro_bool_scalar.py  add_headers.py  analyze_mixed_func.py  benchmark_compare.py  changelog.md  check_cache.py  check_device.py  check_device_v2.py  compare_with_jax.py  current_trace.txt  custom_ops.mojopkg  debug_grad.py  debug_grad_simple.py  debug_graph_key_mul.py  debug_mlp_vjp.py  debug_mul_unitv2.py  debug_multi_axis_reduction.py  debug_multiplication.py  debug_repro_test_binary.py  debug_reshard.py  (+113 more)
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.github/: FUNDING.yml
_sources/: getting_started.md  index.md
_static/: custom.css  custom.js
api/: binary.html  binary_add.html  binary_div.html  binary_greater_equal.html  binary_mul.html  binary_pow.html  binary_sub.html  core.html  core_Array.html  core_jit.html  core_jvp.html  core_vjp.html  core_vmap.html  core_xpr.html  creation.html  creation_arange.html  creation_array.html  creation_ones.html  creation_ones_like.html  creation_randn.html  creation_zeros.html  creation_zeros_like.html  index.html  linalg.html  linalg_matmul.html  manipulation.html  manipulation_broadcast_batch_dims.html  manipulation_broadcast_to.html  manipulation_reshape.html  manipulation_shallow_copy.html  manipulation_squeeze.html  manipulation_transpose.html  manipulation_unsqueeze.html  reduction.html  reduction_sum.html  reduction_sum_batch_dims.html  unary.html  unary_cast.html  unary_cos.html  unary_decr_batch_dim_ctr.html  (+6 more)
custom_kernels/: kernels.mojopkg
docs/: 404.md  DOCUMENTATION_COMPLETE.md  Makefile  README.md  SEO_ANALYSIS.md  SEO_COMPLETE.md  _config.yml  build.sh  conf.py  conf_new.py  conf_old.py  favicon_test.html  get_started.md  getting_started.md  google_colab_setup.md  index.md  requirements.txt  requirements_new.txt  requirements_old.txt  structure.json  verify_seo.html
eager/: CLAUDE.md  __init__.py  binary_ops.py  compile_trafo.py  compute_graph.py  context.py  creation.py  functional.py  logical_view_ops.py  multi_output_ops.py  ops.py  physical_ops.py  pytree.py  random.py  reduction_ops.py  sharding.py  sharding_propagation.py  tensor.py  tensor_impl.py  tracing.py  unary_ops.py  view_ops.py  view_ops2.py  vmap_trafo.py
examples/: 01_mlp_training.py  01_tensors_and_ops.py  02_autodiff.ipynb  02_autodiff.py  02_mlp_pipeline_parallel.py  03_graph_tracing.ipynb  03_mlp_pp_dp_training.py  03a_mlp_training_pytorch.py  03b_mlp_training_jax.py  04_mlp_pipeline_inference.py  04_transforms_and_compile.py  04a_mlp_training_pytorch.ipynb  04b_mlp_training_jax.ipynb  05_jax_comparison_compiled.py  05a_transformer_pytorch.py  05b_transformer_jax.py  06_lora_finetuning_mvp.py  06_mlp_pipeline_parallel.py  06a_transformer_pytorch.ipynb  06b_transformer_jax.ipynb  07_mlp_pipeline_parallel.ipynb  07_mlp_pp_dp_training.py  07_qlora_finetuning_mvp.py  08_mlp_pipeline_inference.py  08_mlp_pp_dp_training.ipynb  09_jax_comparison_compiled.py  09_mlp_pipeline_inference.ipynb  10_jax_comparison_compiled.ipynb  10_lora_finetuning_mvp.py  11_lora_finetuning.ipynb  11_qlora_finetuning_mvp.py  12_custom_mojo_kernels.ipynb  13_cnn_train_benchmark.ipynb  README.md  __init__.mojo  add_one_custom.py  complex_pipeline_sharding.py  conds_djit.py  conds_jit.py  convnet_train_imperative.py  (+78 more)
experimental/: changelog.md  max_bindings.mojo  mlp.mojo  nabla.mojo  ops_test.mojo  pixi.toml  readme.md  run_examples.mojo  run_tests.mojo  shardy_replication.py  tensor.mojo  test.mojo  test.py  test_driver.mojo  test_env_limit.py  test_exports.mojo  test_jit.mojo  test_module.mojo  test_motree.mojo  test_ops.mojo  test_refactor.mojo  trafo_test.mojo  trafo_test.py
experiments/: mojo_dict_ref.md  mojo_lifetimes_ref.md  mojo_unsafepointer_ref.md  mojo_variant_ref.md
mojo/: trafo_test.mojo
nabla/: AGENTS.md  CLAUDE.md  README.md  __init__.mojo  __init__.py  config.py  testing.py
nabla-mojo/: readme.md
nabla-mojo-experimental/: CITATION.cff  readme.md  run_tests.mojo
scripts/: final_seo_report.py  generate_api_docs.py  readme.md  release.py  seo_audit.py  setup_pypi.sh  update_docs.py
tests/: AGENTS.md  README.md  TESTING_PLAN.md  __init__.mojo  __init__.py  basic_test.py  binary_ops.mojo  conftest.py  debug_all_gather_logic.py  debug_autograd.py  debug_reducesum_vjp.py  debug_sharded_ops.py  debug_sharding_variations.py  debug_vmap_sharding.py  main.py  readme.md  reduce_ops.mojo  sharding_test_utils.py  test_2d_mesh_sharding.py  test_binary_ops_sharding.py  test_communication_ops.py  test_compile_dynamic.py  test_conflict_resolution.py  test_dynamic_batch_mlp.py  test_eager.py  test_eager_sharding.py  test_graph_traversal.py  test_hierarchical_propagation.py  test_large_scale_mlp.py  test_multi_output_ops.py  test_nested_vmap_advanced.py  test_new_model_execute.mojo  test_operation_abc.py  test_physical_ops.py  test_refactoring.py  test_reshape_compound_factors.py  test_shape.py  test_sharding_advanced.py  test_sharding_binary_broadcasting.py  test_sharding_broadcast_matmul.py  (+22 more)
tmp/: animate.py  qlora.py  qloralarge.py  test.mojo
tutorials/: 01_tensors_and_ops.py  02_autodiff.py  03a_mlp_training_pytorch.py  03b_mlp_training_jax.py  04_transforms_and_compile.py  05a_transformer_pytorch.ipynb  05a_transformer_pytorch.py  05b_transformer_jax.py  _convert_to_notebooks.py  advanced_topics.html  autodiff_with_nabla.ipynb  autodiff_with_nabla_2.ipynb  automatic_differentiation.html  automatic_differentiation_with_nabla.ipynb  basic_operations.html  index.html  jax_vs_nabla_mlp_cpu.ipynb  jax_vs_nabla_transformer_cpu.ipynb  jit_vs_nonjit.ipynb  mlp_jax_vs_nabla.ipynb  mlp_training.ipynb  mlp_training_cpu.ipynb  mlp_training_gpu.ipynb  nabla_vs_jax.ipynb  nabla_vs_jax_cpu.ipynb  (+8 more)
(+2110 files in other folders)
