[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nabla_ml"
version = "25.10271359"
authors = [
    { name = "TilliFe", email = "tillmann.fehrenbach@gmail.com" },
]
description = "Dynamic neural networks and function transformations in Python + Mojo"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["deep learning", "machine learning", "jax", "autodiff", "nabla", "mojo", "max", "gpu", "vmap", "grad"]

dependencies = [
    "numpy>=2.0.0",
    "modular>=26.2.0.dev2026020706",
]

[project.urls]
Homepage = "https://github.com/nabla-ml/nabla"
Repository = "https://github.com/nabla-ml/nabla"
"Bug Tracker" = "https://github.com/nabla-ml/nabla/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "black",
    "mypy",
    "build",
    "twine",
    "pre-commit",
    # "maxsdk-dev" # Placeholder
    # "mojo-sdk-dev" # Placeholder
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "C4", "A", "SIM", "PTH"]
ignore = [
    "E501",   # Line too long
    "UP007",  # Use Union instead of | for Python 3.9 compatibility
    "UP038",  # isinstance(x, (A, B)) style - valid Python, no functional change
    "N806",   # Uppercase variable names in functions (math vars: A, B, J, GRAPH, Tensor)
    "N812",   # `import functional as F` - PyTorch convention
    "N811",   # GRAPH imported as g - intentional short alias
    "N817",   # CamelCase imported as acronym (e.g. Tensor as T) - intentional
    "N802",   # Function name `T` (transpose property) - intentional
    "N803",   # Argument name `Tensor` - intentional
    "B027",   # Empty method without abstract decorator - design choice
    "E402",   # Module-level import not at top of file - circular import avoidance
    "B028",   # No explicit stacklevel in warnings
    "N999",   # Invalid module name (examples use 01_, 02_ prefixes)
    "E731",   # Lambda assignments - common in test definitions
]

[tool.ruff.lint.per-file-ignores]
"nabla/__init__.py" = ["A001", "A004"]  # Allow sum/max/min shadowing in public API
"nabla/ops/__init__.py" = ["A004"]  # Allow shadowing in public API
"nabla/ops/binary.py" = ["A001", "A004"]  # Allow intentional shadowing of built-in 'pow'
"nabla/ops/reduce.py" = ["A001"]  # Allow intentional shadowing of built-in 'sum'
"nabla/ops/unary.py" = ["A001"]  # Allow intentional shadowing of built-ins (abs, max, min, etc.)
"nabla/ops/*.py" = ["A001"]  # Allow intentional shadowing of built-ins in ops modules
"nabla/transforms/__init__.py" = ["A004"]  # Allow compile import shadowing
"nabla/transforms/compile.py" = ["A001"]  # Allow compile shadowing
"tests/**/test_compile*.py" = ["A004"]  # Allow compile import shadowing in tests
"tests/depr/test_pp_dp*.py" = ["N801"]  # Allow PP_DP class naming convention
"tests/integration/test_nested_dict_vjp.py" = ["E721"]  # Allow type comparison with == for tests
"tests/integration/test_new_vjp.py" = ["E731"]  # Allow lambda assignments in tests
"tests/integration/test_vjp_edge_cases.py" = ["N803", "N806"]  # Allow uppercase variable names in matrix tests
"tests/integration/vjp_compatibility_demo.py" = ["N803", "N806"]  # Allow uppercase variable names in matrix tests
"tests/integration/test_vjp_jax_compatibility.py" = ["F401"]  # Allow unused imports in compatibility tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# files = "src/nabla, tests"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["nabla*"]
exclude = ["tests*", "experimental*"]

[tool.setuptools.package-data]
"nabla" = ["**/*.mojo", "**/*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --color=yes"
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "benchmark: marks tests as performance benchmarks (deselect with '-m \"not benchmark\"')",
    "gpu: marks tests as requiring GPU hardware",
    "slow: marks tests as slow-running (>10s)",
    "mojo: marks tests as requiring Mojo SDK",
]